--- a/index.html
+++ b/index.html
@@ -114,59 +114,57 @@
 
             <!-- section 1 -->
             <div class="outer w-100  d-flex  " ">
-                <div style="width:48%; padding-right:40px;"
-                    class="one  h-100  d-flex flex-column justify-content-center  ">
-                    <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
-                    <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
-                    <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
-                        created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
-                        called she very. Beast creeping. air secod without, good shall two forth a stars every have
-                        won't seed be forth Tree fruitful may May light that thating</p>
-                    <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
-                            class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-                <div class=" h-100  " style="width:50%;">
-                    <img src="./creative/1 (1).jpg" alt="" class="" style="width:100%;">
-                </div>
+                <div style=" width:48%; padding-right:40px;"
+                class="one  h-100  d-flex flex-column justify-content-center  mt-5">
+                <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
+                <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
+                <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
+                    created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
+                    called she very. Beast creeping. air secod without, good shall two forth a stars every have
+                    won't seed be forth Tree fruitful may May light that thating</p>
+                <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
+                        class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            </div>
+            <div class=" h-100  " style="width:50%;">
+                <img src="./creative/1 (1).jpg" alt="" class="" style="width:100%;">
+            </div>
+        </div>
+
+        <!-- section 2 -->
+        <div class="outer w-100  d-flex mt-5 ">
+
+            <div class="w-50 h-100  " style="width:50%;">
+                <img src="./creative/2.jpg" alt="" class="w-100">
+            </div>
+            <div style="width:48%; padding-right:40px;" class="one  h-100  d-flex flex-column justify-content-center mt-5  ">
+                <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
+                <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
+                <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
+                    created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
+                    called she very. Beast creeping. air secod without, good shall two forth a stars every have
+                    won't seed be forth Tree fruitful may May light that thating</p>
+                <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
+                        class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
 
-            <!-- section 2 -->
-            <div class="outer w-100  d-flex mt-5 ">
+        </div>
 
-                <div class="w-50 h-100  " style="width:50%;">
-                    <img src="./creative/1 (1).jpg" alt="" class="w-100">
-                </div>
-                <div style="width:48%; padding-right:40px;"
-                    class="one  h-100  d-flex flex-column justify-content-center  ">
-                    <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
-                    <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
-                    <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
-                        created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
-                        called she very. Beast creeping. air secod without, good shall two forth a stars every have
-                        won't seed be forth Tree fruitful may May light that thating</p>
-                    <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
-                            class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-
+        <!-- section 3 -->
+        <div class="outer w-100  d-flex mt-5 ">
+            <div style="width:48%; padding-right:40px;" class="one  h-100  d-flex flex-column justify-content-center mt-5 ">
+                <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
+                <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
+                <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
+                    created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
+                    called she very. Beast creeping. air secod without, good shall two forth a stars every have
+                    won't seed be forth Tree fruitful may May light that thating</p>
+                <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
+                        class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
-
-            <!-- section 3 -->
-            <div class="outer w-100  d-flex mt-5 ">
-                <div style="width:48%; padding-right:40px;"
-                    class="one  h-100  d-flex flex-column justify-content-center  ">
-                    <h6 class="text-danger start">CLIENT WORK EXPERIENCE</h6>
-                    <h3 class="mt-3">For You beast you herb whales she would two you are</h3>
-                    <p style="color:#6c6c6f; " class="my-4">Seasons let creeping seasons was green a tree called bring
-                        created Shall made whales very green may above dominion seed. Day wo out. Doesn creeping can
-                        called she very. Beast creeping. air secod without, good shall two forth a stars every have
-                        won't seed be forth Tree fruitful may May light that thating</p>
-                    <a href="#" style="text-decoration:none ;color:black; " class="fw-bold">LEARN MORE <i
-                            class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                </div>
-                <div class="w-50 h-100  " style="width:0%;">
-                    <img src="./creative/1 (1).jpg" alt="" class="w-100">
-                </div>
+            <div class="w-50 h-100  " style="width:0%;">
+                <img src="./creative/3.jpg" alt="" class="w-100">
             </div>
+        </div>
 
         </div>
 
